alterando db para sqlite e aplicando seeds

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,4 @@
 PORT=4000
+BASE_URL="http://localhost:4000"
+DATABASE_URL="file:D:\app\b7store\b7store-backend\db\db.db"
+API_FRETE="https://brasilapi.com.br/api/cep/v1/{cep}"
