--- a/package.json
+++ b/package.json
@@ -1,16 +1,28 @@
 {
-  "name": "b7store-backend",
+  "name": "clear",
   "version": "1.0.0",
-  "description": "",
+  "description": "This document describes all available API routes, their parameters, request/response types, and authentication requirements.",
+  "keywords": [],
+  "homepage": "https://github.com/VictorMann/b7store-backend#readme",
+  "bugs": {
+    "url": "https://github.com/VictorMann/b7store-backend/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/VictorMann/b7store-backend.git"
+  },
+  "license": "ISC",
+  "author": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "dev": "tsx watch --env-file=.env src/server.ts"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "module",
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  },
   "dependencies": {
+    "@prisma/adapter-better-sqlite3": "^6.18.0",
     "@prisma/client": "^6.16.3",
     "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
