--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 PORT=4000
 BASE_URL="http://localhost:4000"
+FRONT_END_URL="http://locahost:3000"
 DATABASE_URL="file:D:\app\b7store\b7store-backend\db\db.db"
 API_FRETE="https://brasilapi.com.br/api/cep/v1/{cep}"
+STRIPE_SECRET_KEY="sk_test_51SDdssdsd"
