--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ FRONT_END_URL="http://locahost:3000"
 DATABASE_URL="file:D:\app\b7store\b7store-backend\db\db.db"
 API_FRETE="https://brasilapi.com.br/api/cep/v1/{cep}"
 STRIPE_SECRET_KEY="sk_test_51SDdssdsd"
+STRIPE_WEBHOOK_SECRET="whsec_0c89cc13"
